--- a/series/07.md
+++ b/series/07.md
@@ -69,10 +69,10 @@ $$\mathcal{L}_{\text{VAE}} = \underbrace{\mathbb{E}_{q(\mathbf{z}|\mathbf{x})}[\
 | $r \approx \sqrt{d}$ の殻 | 中程度 | **ほぼ全質量が集中** |
 | 遠方 | 急激に減少 | ほぼゼロ（密度が微小） |
 
-VAEの潜在空間では、正則化が事後分布をこの標準正規分布に合わせようとする。結果として、潜在表現は $\sqrt{d}$ 付近の典型帯に集中する傾向がある。この帯から外れた領域——原点付近も遠方も——では復元が不安定になりうる。空間全体が均等に使われるわけではなく、**半径方向に狭い「居住可能帯」ができる**のがガウス潜在空間の構造的な特徴である。
+VAEの潜在空間では、正則化が事後分布をこの標準正規分布に合わせようとする。結果として、潜在表現は $\sqrt{d}$ 付近の典型帯に集中する傾向がある。この帯の外——原点付近も遠方も——は事前分布の下で訪れにくく、デコーダの学習が手薄になりやすい。そのため、典型帯の外での復元・生成・補間は不安定になりがちである。空間全体が均等に使われるわけではなく、**半径方向に狭い「居住可能帯」ができる**のがガウス潜在空間の実践上の特徴である。
 
 > [!NOTE]
-> **典型集合と「殻」の直感：** 高次元ガウス分布のサンプルが球殻に集中する現象は、低次元の直感に反する。2次元や3次元では確かに原点付近にサンプルが多いが、次元が上がると体積の効果が支配的になり、半径 $\sqrt{d}$ 付近の薄い殻にほとんどの確率質量が集中する。VAEの潜在空間でも同様の現象が起き、表現が実質的に使える領域が制限される。
+> **典型集合と「殻」の直感：** 高次元ガウス分布のサンプルが球殻に集中する現象は、低次元の直感に反する。2次元や3次元では中心付近の密度が高いため「サンプルも中心に集まる」という直感が働きやすいが、低次元でも典型半径は0ではない（2次元で $r \approx 1$、3次元で $r \approx \sqrt{2}$）。次元が上がるにつれてこの典型半径が $\sqrt{d}$ へと伸び、殻への集中がより顕著になる。VAEの潜在空間でも同様の現象が起き、表現が実質的に使える領域が制限される。
 
 ### 球面への脱出：vMFという回答
 
