確率単体と多様体の関係を詳述

--- a/series/04.md
+++ b/series/04.md
@@ -43,7 +43,10 @@ $$\text{softmax}(\mathbf{z})_i = \frac{\exp(z_i / \tau)}{\sum _{j=1}^{K} \exp(z_
 
 ここで $\tau > 0$ は温度パラメータ（後述）である。
 
-この関数を幾何学的に理解すると、Softmaxは「 $\mathbb{R}^K$ から確率単体 $\Delta^{K-1}$ への滑らかな写像」として捉えられる。入力のロジット空間は $K$ 次元のユークリッド空間であり、出力は $(K-1)$ 次元の確率単体である。次元が1つ減るのは、確率の和が1という制約のためである。
+この関数を幾何学的に理解すると、Softmaxは「 $\mathbb{R}^K$ から確率単体の**内部（interior）** $\text{int}(\Delta^{K-1})$ への滑らかな写像」として捉えられる。入力のロジット空間は $K$ 次元のユークリッド空間であり、出力は $(K-1)$ 次元の確率単体の内部である。次元が1つ減るのは、確率の和が1という制約のためである。
+
+> [!TIP]
+> **単体の「内部」と多様体構造：** 確率単体 $\Delta^{K-1}$ は、境界（いずれかの $p_i = 0$ ）を含む凸集合であり、境界の「角（かど）」や「辺」があるため、それ自体は滑らかな多様体ではない。しかし、Softmaxの出力は指数関数の性質上 $p_i > 0$ を常に満たし、境界に到達しない。したがって、Softmaxの像は単体の**開内部** $\text{int}(\Delta^{K-1}) = \{ \mathbf{p} \in \Delta^{K-1} \mid p_i > 0 \; \forall i \}$ に限られる。この開内部は境界を持たない $(K-1)$ 次元の滑らかな多様体であり、情報幾何学で扱う統計多様体として自然に機能する。以後 **確率単体を「多様体」と呼ぶとき、特に断りがない限り、この開内部を指す**。
 
 > [!NOTE]
 > **指数関数の役割：** Softmaxが指数関数を使う理由は複数ある。(1) 負のロジットも正の確率に変換できる、(2) 微分可能で滑らか、(3) 後述する最大エントロピー原理との整合性。ただし、指数関数は数値的にオーバーフローしやすいため、実装では最大値を引く安定化が必要（実装ノート参照）。
@@ -98,6 +101,9 @@ $$\frac{\partial \mathcal{L}}{\partial z_i} = p_i - \mathbf{1}[i = y]$$
 
 > [!NOTE]
 > **情報幾何学的な視点：** この冗長性は、カテゴリカル分布のパラメータ空間が $(K-1)$ 次元であることと対応している。Softmaxは $\mathbb{R}^K$ から確率単体への**商写像**（quotient map）として理解でき、 $\mathbf{1}$ 方向を「潰す」操作を行っている。Fisher情報行列が $\pi$ をそのまま座標に取ると特異になるのも、この冗長性の反映である。
+
+> [!NOTE]
+> **ゲージ自由度と商空間の多様体構造：** $\mathbb{R}^K$ の点のうち、 $\mathbf{1} = (1, 1, \ldots, 1)$ 方向に平行移動した点はすべて単体上の同一の点に写る。すなわち、ロジット $\mathbf{z}$ と $\mathbf{z} + c\mathbf{1}$ は同じ確率分布を定める。この同値関係により、ロジット空間は「 $\mathbf{1}$ 方向を同一視した商空間 $\mathbb{R}^K / \mathbb{R}\mathbf{1}$ 」として $(K-1)$ 次元の多様体構造を持つ。物理学の言葉を借りれば、 $\mathbf{1}$ 方向は**ゲージ自由度**であり、Softmaxはこのゲージを固定して確率単体の内部への全射を与えている。
 
 ### 独立から系列へ：CRFの導入
 
@@ -252,6 +258,9 @@ $$F_{ij} = \mathbb{E}_{p(x;\boldsymbol{\theta})}\left[\frac{\partial \log p}{\pa
 この行列は、正則性条件（分布の台がパラメータに依存しない、微分と積分の交換が可能など）の下で、確率分布の空間における **リーマン計量** として機能する。直感的には、「パラメータをどの方向に動かすと、分布が大きく変わるか」を定量化している。
 
 カテゴリカル分布 $p(k) = \pi_k$ の場合、フィッシャー情報行列の構造は座標系の取り方に依存する。 $\pi_1, \ldots, \pi_K$ をそのまま座標として扱うと、 $\sum_k \pi_k = 1$ の制約により行列は特異（退化）になる。独立な $(K-1)$ 次元座標に落とすと、オフ対角成分も現れる。直感的には、Fisher-Rao計量の下で「確率が小さいカテゴリほど、わずかな変化で分布が大きく変わる（境界付近が強く重み付けされる）」という性質があり、これが自然勾配の挙動に影響する。より具体的には、独立座標で見たとき計量成分が概ね $1/\pi_k$ のオーダーで効くため、 $\pi_k \to 0$ で大きくなる。
+
+> [!NOTE]
+> **境界での特異性とSoftmaxによる回避：** Fisher情報行列は、単体の内部 $\text{int}(\Delta^{K-1})$ （すべての $\pi_k > 0$ ）では正定値なリーマン計量として機能する。しかし、**境界（いずれかの $\pi_k \to 0$ ）では計量成分が発散し、通常のリーマン多様体としての性質が失われる（計量特異点となる）**。Softmaxは指数関数の性質上この境界に到達しないため、出力は常に計量が正定値な領域に留まる。これが、Softmaxの像を「滑らかな統計多様体」として安心して扱える理由である。
 
 > [!NOTE]
 > **リーマン計量としてのフィッシャー情報：** 第0回で導入したリーマン計量の概念が、ここで確率分布空間に適用される。フィッシャー情報行列は、統計的な意味で「自然な」距離を定義する。この距離は、パラメータ空間での見かけの距離ではなく、分布間の「区別のしやすさ」を反映している。
@@ -575,7 +584,7 @@ def natural_gradient_step(params, loss_fn, data, lr=0.01, damping=1e-4):
 
 | 概念 | 定義 | Softmaxでの役割 |
 | --- | --- | --- |
-| **確率単体** | 確率分布の空間（凸集合） | Softmaxの出力空間 |
+| **確率単体** | 確率分布の空間（凸集合） | Softmaxの出力空間（内部） |
 | **最大エントロピー原理** | 制約下で最もランダムな分布 | Softmaxが指数型になる理由 |
 | **Log-Sum-Expの凸性** | 滑らかな最大値関数 | 損失関数の最適化しやすさ |
 | **フィッシャー情報行列** | 確率空間のリーマン計量 | 自然勾配の定義 |
@@ -586,7 +595,7 @@ def natural_gradient_step(params, loss_fn, data, lr=0.01, damping=1e-4):
 
 ### 本回のポイント
 
-Softmaxは単なる「確率への変換」ではない。情報幾何学の観点からは、それは確率分布の多様体上への写像であり、温度パラメータはその多様体上での「位置」を制御する。そして、入力と重みが正規化されている場合、Softmaxは「角度を確率に変換する装置」として読める。
+Softmaxは単なる「確率への変換」ではない。情報幾何学の観点からは、それは確率単体の内部——境界を含まない滑らかな統計多様体——への写像であり、温度パラメータはその多様体上での「位置」を制御する。そして、入力と重みが正規化されている場合、Softmaxは「角度を確率に変換する装置」として読める。
 
 次回は、この幾何学的視点をさらに発展させ、角度マージンの設計とSVMとの統一的理解を目指す。
 
