--- a/series/04.md
+++ b/series/04.md
@@ -35,6 +35,9 @@ $$\sum_{i=1}^{K} p_i = 1, \quad p_i \geq 0$$
 
 確率単体は凸集合であり、その頂点はone-hotベクトル（ひとつだけ1、他は0）に対応する。単体の内部点は「確率分布」を、頂点は「確定的な選択」を表す。
 
+![確率単体 Δ²（K=3）](fig_simplex.svg)
+*図4.1： $K=3$ の確率単体 $\Delta^2$ 。赤い実線が境界（いずれかの $p_i = 0$ ）、青い破線の内側が開内部 $\text{int}(\Delta^2)$ （滑らかな多様体）。Softmaxの出力は常に内部に留まり、境界には到達しない。*
+
 ### Softmaxの定義と幾何学的解釈
 
 Softmax関数は、任意の実数ベクトル $\mathbf{z} \in \mathbb{R}^K$ （ロジット）を確率単体上の点に変換する：
@@ -45,8 +48,11 @@ $$\text{softmax}(\mathbf{z})_i = \frac{\exp(z_i / \tau)}{\sum _{j=1}^{K} \exp(z_
 
 この関数を幾何学的に理解すると、Softmaxは「 $\mathbb{R}^K$ から確率単体の**内部（interior）** $\text{int}(\Delta^{K-1})$ への滑らかな写像」として捉えられる。入力のロジット空間は $K$ 次元のユークリッド空間であり、出力は $(K-1)$ 次元の確率単体の内部である。次元が1つ減るのは、確率の和が1という制約のためである。
 
-> [!TIP]
-> **単体の「内部」と多様体構造：** 確率単体 $\Delta^{K-1}$ は、境界（いずれかの $p_i = 0$ ）を含む凸集合であり、境界の「角（かど）」や「辺」があるため、それ自体は滑らかな多様体ではない。しかし、Softmaxの出力は指数関数の性質上 $p_i > 0$ を常に満たし、境界に到達しない。したがって、Softmaxの像は単体の**開内部** $\text{int}(\Delta^{K-1}) = \{ \mathbf{p} \in \Delta^{K-1} \mid p_i > 0 \; \forall i \}$ に限られる。この開内部は境界を持たない $(K-1)$ 次元の滑らかな多様体であり、情報幾何学で扱う統計多様体として自然に機能する。以後 **確率単体を「多様体」と呼ぶとき、特に断りがない限り、この開内部を指す**。
+> [!NOTE]
+> **単体の「内部」と多様体構造：** 確率単体 $\Delta^{K-1}$ は、境界（いずれかの $p_i = 0$ ）を含む凸集合であり、境界の「角（かど）」や「辺」があるため、それ自体は滑らかな多様体ではない。しかし、Softmaxの出力は指数関数の性質上 $p_i > 0$ を常に満たし、境界に到達しない。したがって、Softmaxの像は単体の**開内部** $\text{int}(\Delta^{K-1}) = \{ \mathbf{p} \in \Delta^{K-1} \mid p_i > 0 \; \forall i \}$ に限られる。この開内部は境界を持たない $(K-1)$ 次元の滑らかな多様体であり、情報幾何学で扱う統計多様体として自然に機能する。本資料で確率単体を「多様体」と呼ぶとき、特に断りがない限り、この開内部を指す。
+
+![Softmax写像](fig_softmax_map.svg)
+*図4.2：Softmax写像の全体像。ロジット空間 $\mathbb{R}^K$ の各点が単体の内部 $\text{int}(\Delta^{K-1})$ に写される。 $\mathbf{1}$ 方向に平行移動した点（紫）は同一の分布に写る。像は常に境界（赤）の内側に留まる。*
 
 > [!NOTE]
 > **指数関数の役割：** Softmaxが指数関数を使う理由は複数ある。(1) 負のロジットも正の確率に変換できる、(2) 微分可能で滑らか、(3) 後述する最大エントロピー原理との整合性。ただし、指数関数は数値的にオーバーフローしやすいため、実装では最大値を引く安定化が必要（実装ノート参照）。
@@ -302,6 +308,9 @@ $$\text{softmax}(\mathbf{z} / \tau)_i = \frac{\exp(z_i / \tau)}{\sum_j \exp(z_j 
 | $\tau \to \infty$ | 差が縮小される | 一様分布に近づく |
 
 低温ではロジットの差が強調され、分布は頂点（one-hot）に近づく。高温では差が平滑化され、分布は中心（一様）に近づく。
+
+![温度パラメータの効果](fig_temperature.svg)
+*図4.3：温度パラメータ $\tau$ による分布の変化。ロジット $\mathbf{z} = (2.0, 1.0, 0.1)$ を固定し、 $\tau$ を変化させたときの単体上の位置。 $\tau \to 0$ で頂点（argmax）に集中し、 $\tau \to \infty$ で中心（一様分布）に近づく。*
 
 ### 温度と集中度の対応
 
