--- a/series/00.md
+++ b/series/00.md
@@ -88,9 +88,9 @@
 
 単純な線形補間（ユークリッド空間での直線）では、中間点が球面から外れてしまう。これに対し、**球面線形補間（Slerp: Spherical Linear Interpolation）** は、球面上の測地線に沿った補間を与える（Shoemake, 1985）。以下の図で **「球面線形補間（Slerp） vs 線形補間」** を比較する。
 
-<img src="00_slerp_vs_lerp.svg" alt="Slerp vs 線形補間" width="80%">
+<img src="00_slerp_vs_lerp.svg" alt="Slerp vs 線形補間" width="40%">
 
-図: 球面線形補間（Slerp）と線形補間の比較。Slerpは球面上の測地線（大円）に沿って補間するため、すべての中間点で単位ベクトルのノルムが保たれる。一方、線形補間は球面を突き抜けるため、中間点のノルムが1未満になる。
+図: 球面線形補間（Slerp）と線形補間の比較。Slerpは球面上の測地線（大円）に沿って補間するため、すべての中間点で単位ベクトルのノルムが保たれる。一方、線形補間は球面を突き抜けるため、中間点のノルムが1未満になる。 $t \in [0,1]$ として、Slerpは $\mathrm{Slerp}(v_0, v_1, t)=\frac{\sin((1-t)\theta)}{\sin\theta}v_0+\frac{\sin(t\theta)}{\sin\theta}v_1$ 、線形補間は $(1-t)v_0 + tv_1$ 。Slerpは $||v||=1$ を保つが、線形補間の中点は $||v|| \approx 0.71$ になる。
 
 > [!CAUTION]
 > **Slerpが適切なのは「球面制約が設計に組み込まれている場合」に限られる。** 埋め込みが正規化されていない場合、あるいはコサイン類似度を使っていても学習目的が球面幾何と整合しない場合は、Slerpが「意味的に自然な補間」を与える保証はない。「意味の線形性」は幾何というよりタスクや損失関数の設計に依存する。
@@ -145,7 +145,7 @@ def slerp(v0, v1, t):
 
 逆に、鞍型の曲面（プリングルスの形）では、三角形は「痩せる」。これが **負の曲率** である。図では **「曲率による三角形の違い」** を並べて確認する。
 
-<img src="00_curvature_triangles.svg" alt="曲率による三角形の違い" width="100%">
+<img src="00_curvature_triangles.svg" alt="曲率による三角形の違い" width="80%">
 
 図: 曲率による三角形の違い。平面（曲率=0）では内角の和が180°、球面（曲率>0）では180°より大きく、双曲面（曲率<0）では180°より小さい。
 
@@ -157,9 +157,9 @@ def slerp(v0, v1, t):
 
 この「ズレ」の量が曲率を反映している。深層学習の文脈では、表現空間の曲率が学習ダイナミクスに影響を与える（第4回で詳述）。図は **「球面上の平行移動とベクトルの回転」** を示し、北極→赤道→北極の経路で90°回転する様子を描いている。
 
-<img src="00_parallel_transport_curvature.svg" alt="平行移動による曲率の理解" width="100%">
+<img src="00_parallel_transport_curvature.svg" alt="平行移動による曲率の理解" width="70%">
 
-図: 球面上の平行移動とベクトルの回転。北極→赤道→北極の経路でベクトルを平行移動させると、元の位置に戻ったときに90°回転している。このズレの量が曲率を反映している。
+図: 球面上の平行移動とベクトルの回転。北極→赤道→北極の経路でベクトルを平行移動させると、元の位置に戻ったときに90°回転している。このズレの量が曲率を反映している。球面は曲がっているため、ベクトルを「平行に」移動しても、元の場所に戻ったときに向きがズレる。このズレの量が曲率を反映している。
 
 ## リーマン計量：「距離の測り方」を定める
 
