Transformerについて記述

--- a/series/03.md
+++ b/series/03.md
@@ -35,6 +35,9 @@
 これにより、**同等の精度に達するまでの学習ステップ数を4〜20倍削減**したと報告されている（シーケンス長に依存）。
 
 > [!NOTE]
+> **Transformerの構成要素について：** 上記のリストに登場する「注意機構」「FFN」「残差接続」などが何を指すか分からなくても、本回の議論は追える。これらはTransformerというアーキテクチャの主要な構成要素であり、nGPTはそのすべてに球面制約を課すという設計である。Transformer全体の構造と、各構成要素が幾何学的にどう再解釈されるかについては、**第6回の冒頭で整理する**。
+
+> [!NOTE]
 > **「高速化」の意味：** nGPTの主張は「学習ステップ数の削減」であり、壁時計時間（実時間）やFLOPsがそのまま4〜20倍改善されるとは限らない。正規化のオーバーヘッドがあるため、1ステップあたりの計算コストは増加する可能性がある。総合的な効率改善の程度は、実装やハードウェアに依存する。
 
 ### 「正規化」と「球面制約」の違い
@@ -303,6 +306,9 @@ $$\text{grad}_S f(\mathbf{x}) = \nabla f(\mathbf{x}) - (\nabla f(\mathbf{x})^\to
 第4回「分類の再統一 I」では、Softmaxを情報幾何学の観点から再解釈する。
 
 vMF分布とSoftmaxの関係を深掘りし、「温度」パラメータの幾何学的意味を理解する。さらに、自然勾配がなぜ有効なのかを、確率分布空間の構造から説明する。
+
+> [!TIP]
+> **Transformerに馴染みのない読者へ：** 本回ではnGPTの設計思想を通じて「球面制約」の意味を理解した。nGPTが改良の対象としているTransformerそのものの全体像——どんな構成要素があり、それぞれが何をしているのか——については、第6回「Transformerという測量士」の冒頭で整理する。第4回・第5回はSoftmaxとマージンという、Transformerに限定されない概念を扱うので、Transformerの詳細を知らなくても読み進められる。
 
 ## 実装ノート：正規化の実践
 
