--- a/series/06.md
+++ b/series/06.md
@@ -7,6 +7,71 @@
 - 「球面上のAttention」解釈が厳密に成り立つのは、Cosine AttentionやnGPTなど明示的に $L_2$ 正規化する設計の場合に限られる。
 - それでも「角度的な見方」は、正規化設計を理解するための導線として有用である。
 
+## Transformerの全体像
+
+### なぜここで全体像を示すか
+
+本講義はTransformerの解説書ではない。しかし、本回以降の議論——Attention、正規化、位置埋め込み、FFN——はすべてTransformerの構成要素に対する幾何学的再解釈である。全体像を持たずに個別の要素を語ると、地図なしで建物の内装を見学することになる。
+
+本セクションでは、Transformerの構成要素を最小限の粒度で整理し、各要素が本講義のどこで幾何学的に再解釈されるかを示す。詳細な計算は各回に譲る。
+
+### 構成要素
+
+Transformerは、以下の要素が積み重なった構造である。1ブロック（層）の処理を簡略化すると、次のようになる：
+
+```
+入力トークン列
+  ↓
+[トークン埋め込み + 位置埋め込み]  ... 離散記号を連続ベクトルに変換
+  ↓
+┌─────────── Transformer Block（×N層）───────────┐
+│                                                 │
+│  [Multi-Head Attention]  ... 「どこを見るか」     │
+│       ↓                                         │
+│  [残差接続 + 正規化]                              │
+│       ↓                                         │
+│  [FFN]  ... 「何を変換するか」                     │
+│       ↓                                         │
+│  [残差接続 + 正規化]                              │
+│                                                 │
+└─────────────────────────────────────────────────┘
+  ↓
+[出力層（線形 + Softmax等）]
+```
+
+各要素の役割を一文で述べる：
+
+| 要素 | 役割 | 一言で言えば |
+| --- | --- | --- |
+| **トークン埋め込み** | 離散トークンを $d$ 次元ベクトルに変換 | 「記号を空間に配置する」 |
+| **位置埋め込み** | トークンの順序情報を付与 | 「星に座標を与える」 |
+| **Multi-Head Attention** | 入力に応じてトークン間の関係を動的に計算 | 「望遠鏡で星空を測量する」 |
+| **FFN（Feed-Forward Network）** | 各トークンの表現を非線形に変換 | 「観測データを処理する」 |
+| **残差接続** | 入力をショートカットで加算し、勾配の流れを安定させる | 「元の情報を保持しながら更新する」 |
+| **正規化（LayerNorm等）** | 表現のスケールを安定させる | 「計器のキャリブレーション」 |
+| **出力層** | タスクに応じた最終変換（分類ならSoftmax等） | 「測量結果を報告する」 |
+
+> [!IMPORTANT]
+> **AttentionとFFNの分業：** Attentionは「トークン間の情報交換（どの情報を集めるか）」を担い、FFNは「各トークンの表現変換（集めた情報をどう加工するか）」を担う。この分業構造がTransformerの基本設計である。第3回で見たnGPTは、この両方の出力に球面制約を課す設計だった。また、近年のMoE（Mixture of Experts）ではFFN部分を動的に切り替える設計も登場している（第13回で触れる）。
+
+### 本講義との対応マップ
+
+各構成要素が本講義のどの回で幾何学的に再解釈されるかを示す。この表は「予告」であり、各回を読む際の見通しとして使ってほしい。
+
+| 構成要素 | 幾何学的な問い | 対応する回 |
+| --- | --- | --- |
+| トークン埋め込み | ベクトルはどの空間に住むべきか？ | 第2回（ノルム）、第3回（球面） |
+| 位置埋め込み | 順序をどう幾何学に埋め込むか？ | 第6回（RoPE：本回） |
+| Attention（QKV） | 内積は何を測っているか？ | 第6回（本回） |
+| Softmax | 確率分布空間でどう位置づけるか？ | 第4回（情報幾何学） |
+| FFN | 表現の非線形変換とは何か？ | 第8回（ベクトル場） |
+| 残差接続 | なぜ「足す」のか？ | 第8回（Neural ODE） |
+| 正規化 | LayerNormと球面制約はどう違うか？ | 第3回（nGPT） |
+| 出力層（分類ヘッド） | マージンの幾何学 | 第5回（ArcFace） |
+
+> [!NOTE]
+> **Encoder-DecoderとDecoder-only：** Transformerには大きく分けてEncoder-Decoder型（T5など）とDecoder-only型（GPTなど）がある。上の構成要素は両者に共通する。本講義では特定のアーキテクチャに限定せず、共通する幾何学的構造に注目する。Decoder-onlyモデルでは、Attentionに因果マスク（未来のトークンを見ない制約）が加わるが、幾何学的な本質は変わらない。
+
 ## 導入：静的な地図から動的な測量へ
 
 第1回で見たように、古典的な機械学習手法は「固定された特徴空間」を前提としていた。PCAは固定された主成分軸を、SVMは固定されたカーネル関数を使う。入力が何であれ、空間の構造は変わらない。
