--- a/series/06.md
+++ b/series/06.md
@@ -11,9 +11,7 @@
 
 ### なぜここで全体像を示すか
 
-本講義はTransformerの解説書ではない。しかし、本回以降の議論——Attention、正規化、位置埋め込み、FFN——はすべてTransformerの構成要素に対する幾何学的再解釈である。全体像を持たずに個別の要素を語ると、地図なしで建物の内装を見学することになる。
-
-本セクションでは、Transformerの構成要素を最小限の粒度で整理し、各要素が本講義のどこで幾何学的に再解釈されるかを示す。詳細な計算は各回に譲る。
+Transformerの構成要素を手短に整理し、各要素が本講義のどこで幾何学的に再解釈されるかを示す。
 
 ### 構成要素
 
