[skip ci] updated

--- a/series/04.md
+++ b/series/04.md
@@ -48,7 +48,9 @@ $$\text{softmax}(\mathbf{z})_i = \frac{\exp(z_i / \tau)}{\sum _{j=1}^{K} \exp(z_
 ここで $\tau > 0$ は温度パラメータ（後述）である。
 
 > [!NOTE]
-> **ロジット（logit）とは：** ロジット $z_i$ とは、確率 $p_i$ に変換される前の「生のスコア」であり、任意の実数値を取りうる。名前の由来は、2クラス分類における**ロジスティック関数**（シグモイド関数） $p = \sigma(z) = \frac{1}{1 + e^{-z}}$ の逆関数 $z = \sigma^{-1}(p) = \log\frac{p}{1-p}$ が「**log**-odds（対数オッズ）」と呼ばれることから、その短縮形として**logit**と命名された。多クラス分類では、Softmaxへの入力ベクトル $\mathbf{z}$ 全体をロジットベクトルと呼ぶ。ロジットは、確率空間（ $[0,1]$ に制約された値）とは異なり、 $\mathbb{R}^K$ の全空間を自由に動けるため、ニューラルネットワークの最終層での線形変換の出力として扱いやすい。
+> **ロジット（logit）とは：** ロジット $z_i$ とは、確率 $p_i$ に変換される前の「生のスコア」であり、任意の実数値を取りうる。名前の由来は、2クラス分類における**ロジスティック関数**（シグモイド関数） $p = \sigma(z) = \frac{1}{1 + e^{-z}}$ の逆関数 $z = \sigma^{-1}(p) = \log\frac{p}{1-p}$ が「**log**-odds（対数オッズ）」と呼ばれることから、その短縮形として**logit**と命名された。多クラス分類では、Softmaxへの入力ベクトル $\mathbf{z}$ 全体をロジットベクトルと呼ぶ。
+> 
+> **なぜ確率を直接扱わないのか：** ニューラルネットワークで確率 $\mathbf{p} \in \Delta^{K-1}$ を直接出力しようとすると、いくつかの問題が生じる。(1) **制約の複雑さ**： $\sum_i p_i = 1, p_i \geq 0$ という制約を満たしながら勾配降下法を適用するのは面倒である。制約付き最適化や射影演算が必要になる。(2) **線形性の喪失**：確率は凸集合（単体）内に閉じ込められるため、ネットワークの最終層が線形変換 $\mathbf{z} = W\mathbf{x} + \mathbf{b}$ であっても、その出力を直接確率として解釈できない。(3) **数値的な扱いづらさ**：確率が0に近いとき、勾配が不安定になりやすい。一方、ロジット空間 $\mathbb{R}^K$ は制約のない全空間であり、線形変換の出力をそのまま受け取れる。Softmaxは、この「自由な実数空間」から「制約された確率空間」への滑らかな橋渡しを担う。つまり、**ネットワークは自由に予測し、Softmaxが事後的に整合性を保証する**という分業が、実装と学習の両面で効率的なのである。
 
 この関数を幾何学的に理解すると、Softmaxは「 $\mathbb{R}^K$ から確率単体の**内部（interior）** $\text{int}(\Delta^{K-1})$ への滑らかな写像」として捉えられる。入力のロジット空間は $K$ 次元のユークリッド空間であり、出力は $(K-1)$ 次元の確率単体の内部である。次元が1つ減るのは、確率の和が1という制約のためである。
 
