--- a/series/04.md
+++ b/series/04.md
@@ -62,7 +62,7 @@ $$\text{softmax}(\mathbf{z})_i = \frac{\exp(z_i / \tau)}{\sum _{j=1}^{K} \exp(z_
 > ただし、多クラス分類における「ロジット」は、厳密には2クラスの対数オッズとは異なる。2クラスの場合、ロジット $z$ と確率 $p$ の間には $z = \log(p / (1-p))$ という一意な関係がある。一方、Softmaxでは、Softmaxの平行移動不変性により、ロジット $\mathbf{z}$ と確率 $\mathbf{p}$ の間には $z_i = \log p_i + C$ （ $C$ は任意定数）という関係しか成り立たない。つまり、**多クラスのロジットは対数確率に定数を加えたもの**であり、対数オッズそのものではない。にもかかわらず「ロジット」と呼ばれるのは、2クラスの場合の自然な拡張として、また確率の制約から解放された「生のスコア」という共通の役割を担うためである。
 
 > [!TIP]
-> **なぜ確率を直接扱わないのか：** ニューラルネットワークで確率 $\mathbf{p} \in \Delta^{K-1}$ を直接出力しようとすると、いくつかの問題が生じる。(1) **制約の複雑さ**： $\sum_i p_i = 1, p_i \geq 0$ という制約を満たしながら勾配降下法を適用するのは面倒である。制約付き最適化や射影演算が必要になる。(2) **線形性の喪失**：確率は凸集合（単体）内に閉じ込められるため、ネットワークの最終層が線形変換 $\mathbf{z} = W\mathbf{x} + \mathbf{b}$ であっても、その出力を直接確率として解釈できない。(3) **数値的な扱いづらさ**：確率が0に近いとき、勾配が不安定になりやすい。一方、ロジット空間 $\mathbb{R}^K$ は制約のない全空間であり、線形変換の出力をそのまま受け取れる。Softmaxは、この「自由な実数空間」から「制約された確率空間」への滑らかな橋渡しを担う。つまり、**ネットワークは自由に予測し、Softmaxが事後的に整合性を保証する**という分業が、実装と学習の両面で効率的なのである。
+> **なぜ確率を直接扱わないのか：** ニューラルネットワークで確率 $\mathbf{p} \in \Delta^{K-1}$ を直接出力しようとすると、いくつかの問題が生じる。(1) **制約の複雑さ**： $\sum_i p_i = 1, p_i \geq 0$ という制約を満たしながら勾配降下法を適用するのは面倒である。制約付き最適化や射影演算が必要になる。(2) **線形変換との不整合**：ネットワークの最終層は通常 $\mathbf{z} = W\mathbf{x} + \mathbf{b}$ という線形変換であるが、この出力は $\mathbb{R}^K$ 全体を取りうる。線形変換の出力が自動的に単体の制約 $\sum_i p_i = 1, p_i \geq 0$ を満たす保証はないため、線形変換の出力を直接確率として解釈できない。(3) **数値的な扱いづらさ**：確率が0に近いとき、勾配が不安定になりやすい。一方、ロジット空間 $\mathbb{R}^K$ は制約のない全空間であり、線形変換の出力をそのまま受け取れる。Softmaxは、この「自由な実数空間」から「制約された確率空間」への滑らかな橋渡しを担う。つまり、**ネットワークは自由に予測し、Softmaxが事後的に整合性を保証する**という分業が、実装と学習の両面で効率的なのである。
 
 > [!NOTE]
 > **単体の「内部」と多様体構造：** 確率単体 $\Delta^{K-1}$ は、境界（いずれかの $p_i = 0$ ）を含む凸集合であり、境界の「角（かど）」や「辺」があるため、それ自体は滑らかな多様体ではない。しかし、Softmaxの出力は指数関数の性質上 $p_i > 0$ を常に満たし、境界に到達しない。したがって、Softmaxの像は単体の**開内部** $\text{int}(\Delta^{K-1}) = \{ \mathbf{p} \in \Delta^{K-1} \mid p_i > 0 \; \forall i \}$ に限られる。この開内部は境界を持たない $(K-1)$ 次元の滑らかな多様体であり、情報幾何学で扱う統計多様体として自然に機能する。本資料で確率単体を「多様体」と呼ぶとき、特に断りがない限り、この開内部を指す。
