--- a/series/04.md
+++ b/series/04.md
@@ -62,8 +62,8 @@ $$\text{softmax}(\mathbf{z})_i = \frac{\exp(z_i / \tau)}{\sum _{j=1}^{K} \exp(z_
 > ただし、多クラス分類における「ロジット」は、厳密には2クラスの対数オッズとは異なる。2クラスの場合、ロジット $z$ と確率 $p$ の間には $z = \log(p / (1-p))$ という一意な関係がある。一方、Softmaxでは、Softmaxの平行移動不変性により、ロジット $\mathbf{z}$ と確率 $\mathbf{p}$ の間には $z_i = \log p_i + C$ （ $C$ は任意定数）という関係しか成り立たない。つまり、**多クラスのロジットは対数確率に定数を加えたもの**であり、対数オッズそのものではない。にもかかわらず「ロジット」と呼ばれるのは、2クラスの場合の自然な拡張として、また確率の制約から解放された「生のスコア」という共通の役割を担うためである。
 
 > [!TIP]
-> **なぜ確率を直接扱わないのか：<br>
->** ニューラルネットワークで確率 $\mathbf{p} \in \Delta^{K-1}$ を直接出力しようとすると、いくつかの問題が生じる。<br>
+> **なぜ確率を直接扱わないのか：**<br>
+> ニューラルネットワークで確率 $\mathbf{p} \in \Delta^{K-1}$ を直接出力しようとすると、いくつかの問題が生じる。<br>
 > **(1) 制約の複雑さ**： $\sum_i p_i = 1, p_i \geq 0$ という制約を満たしながら勾配降下法を適用するのは面倒である。制約付き最適化や射影演算が必要になる。<br>
 > **(2) 線形変換との不整合**：ネットワークの最終層は通常 $\mathbf{z} = W\mathbf{x} + \mathbf{b}$ という線形変換であるが、この出力は $\mathbb{R}^K$ 全体を取りうる。線形変換の出力が自動的に単体の制約 $\sum_i p_i = 1, p_i \geq 0$ を満たす保証はないため、線形変換の出力を直接確率として解釈できない。<br>
 > **(3) 数値的な扱いづらさ**：確率が0に近いとき、勾配が不安定になりやすい。一方、ロジット空間 $\mathbb{R}^K$ は制約のない全空間であり、線形変換の出力をそのまま受け取れる。<br>
