Softmaxが0にも1にもならないことを強調

--- a/series/04.md
+++ b/series/04.md
@@ -45,16 +45,20 @@ Softmax関数は、任意の実数ベクトル $\mathbf{z} \in \mathbb{R}^K$ （
 
 $$\text{softmax}(\mathbf{z})_i = \frac{\exp(z_i / \tau)}{\sum _{j=1}^{K} \exp(z_j / \tau)}$$
 
-> [!NOTE]
-> **指数関数の役割：** Softmaxが指数関数を使う理由は複数ある。(1) 負のロジットも正の確率に変換できる、(2) 微分可能で滑らか、(3) 後述する最大エントロピー原理との整合性。ただし、指数関数は数値的にオーバーフローしやすいため、実装では最大値を引く安定化が必要（実装ノート参照）。
-
 ここで $\tau > 0$ は温度パラメータ（後述）である。
+
+> [!CAUTION]
+> 数式から明らかだが、 **どの次元の値も、決して0にも1にもならない** ことに注意。
+> 深層学習において極めて本質的に重要である。
 
 この関数を幾何学的に理解すると、Softmaxは「 $\mathbb{R}^K$ から確率単体の**内部（interior）** $\text{int}(\Delta^{K-1})$ への滑らかな写像」として捉えられる。入力のロジット空間は $K$ 次元のユークリッド空間であり、出力は $(K-1)$ 次元の確率単体の内部である。次元が1つ減るのは、確率の和が1という制約のためである。
 
 <img width="70%" src="04_fig_softmax_map.svg" alt="Softmax写像">
 
 図：Softmax写像の全体像。ロジット空間 $\mathbb{R}^K$ の各点が、確率空間である単体の内部 $\text{int}(\Delta^{K-1})$ に写される様子。オレンジの点は具体的なサンプル（ $z_1, z_2, z_3$ ）の対応関係を示す。特に、点 $z_2 = \mathbf{1} = (1, 1, 1)$ を通り $\mathbf{1}$ 方向に伸びる直線上にある点（紫色のドット $z_2 + c_1\mathbf{1}, z_2 + c_2\mathbf{1}$ ）は、Softmaxの平行移動不変性により、すべて単体上の同一の分布（一様分布）へと写される。Softmaxの出力は常に各要素が正（ $p_i > 0$ ）となるため、像は境界（赤）に到達せず、常にその内側に留まるのが特徴である
+
+> [!NOTE]
+> **指数関数の役割：** Softmaxが指数関数を使う理由は複数ある。(1) 負のロジットも正の確率に変換できる、(2) 微分可能で滑らか、(3) 後述する最大エントロピー原理との整合性。ただし、指数関数は数値的にオーバーフローしやすいため、実装では最大値を引く安定化が必要（実装ノート参照）。
 
 > [!NOTE]
 > **ロジット（logit）とは：** ロジット $z_i$ とは、確率 $p_i$ に変換される前の「生のスコア」であり、任意の実数値を取りうる。名前の由来は、2クラス分類における**ロジスティック関数**（シグモイド関数） $p = \sigma(z) = \frac{1}{1 + e^{-z}}$ の逆関数 $z = \sigma^{-1}(p) = \log\frac{p}{1-p}$ が「**log**-odds（対数オッズ）」と呼ばれることから、その短縮形として**logit**と命名された。
