--- a/series/04.md
+++ b/series/04.md
@@ -125,28 +125,32 @@ $$\text{softmax}(\mathbf{z} + c \cdot \mathbf{1}) = \text{softmax}(\mathbf{z})$$
 
 これは、ロジット空間における「全体的なシフト」がSoftmaxによって吸収されることを意味する。幾何学的には、Softmaxは $\mathbb{R}^K$ を $(K-1)$ 次元の確率単体に写すが、その際に $\mathbf{1} = (1, 1, \ldots, 1)$ 方向の情報が失われる。
 
-このように、特定の方向（ここでは $\mathbf{1}$ 方向）の差を無視し、同じものとみなして扱う空間を、数学的には **商空間（Quotient Space）** $\mathbb{R}^K / \mathbb{R}\mathbf{1}$ と呼ぶ。Softmaxの実体は、この商空間から確率単体への写像である。
+このように、特定の方向（ここでは $\mathbf{1}$ 方向）の差を無視し、同じものとみなして扱う空間を、数学的には **商空間（Quotient Space）** $\mathbb{R}^K / \mathbb{R}\mathbf{1}$ と呼ぶ。Softmaxは $\mathbf{1}$ 方向の平行移動に対して不変であるため、この商空間を経由して（商空間上へ因子化して）、確率単体の内部への写像として理解できる。
 
 **勾配への影響：**
 この商空間の構造は、学習プロセスにも直接現れる。クロスエントロピー損失 $\mathcal{L} = -\log p_y$ の勾配を計算すると以下のようになる。
 
 $$\frac{\partial \mathcal{L}}{\partial z_i} = p_i - \mathbf{1}[i = y]$$
 
-この勾配は常に $\sum_i \frac{\partial \mathcal{L}}{\partial z_i} = 0$ を満たす。つまり、**勾配は $\mathbf{1}$ 方向に成分を持たない**。学習は自動的に冗長な方向を避け、実質的な $K-1$ 次元の商空間内だけで進むこととなる。
+この勾配は常に $\sum_i \frac{\partial \mathcal{L}}{\partial z_i} = 0$ を満たす。つまり、**勾配は $\mathbf{1}$ 方向に成分を持たない（零和制約）**。学習は自動的に冗長な方向を避け、実質的な $K-1$ 次元の商空間内だけで進むこととなる。
 
 | 性質 | 影響 |
 | :--- | :--- |
 | **平行移動不変性** | ロジットの絶対値は意味を持たない（相対的な差のみが重要） |
-| **勾配の零和** | パラメータの更新が冗長な方向へ流れるのを防ぐ |
+| **勾配の零和** | パラメータ更新の勾配は $\mathbf{1}$ 方向に射影されない |
 | **バイアスの冗長性** | 1つのクラスのバイアスを固定してもモデルの表現力は不変 |
 
 > [!NOTE]
 > **ゲージ自由度とバイアス項：**
-> 物理学の言葉を借りれば、この $\mathbf{1}$ 方向の冗長性は**ゲージ自由度**に対応する。分類層 $\mathbf{z} = W\mathbf{x} + \mathbf{b}$ において、バイアス $\mathbf{b}$ の1成分を0に固定する実装があるが、これは「ゲージ固定」を行っていることに相当する。ただし、L2正則化を全成分にかける場合、どの成分を固定するかによって正則化項の値が変わるため、最適化の経路がゲージ選択に依存し得る点には注意が必要だ。
+> 物理学の言葉を借りれば、この $\mathbf{1}$ 方向の冗長性は**ゲージ自由度**に対応する。分類層 $\mathbf{z} = W\mathbf{x} + \mathbf{b}$ において、バイアス $\mathbf{b}$ の1成分を0に固定する実装があるが、これは「ゲージ固定」を行っていることに相当する。ただし、L2正則化のような「ゲージ不変でない正則化」を全成分にかける場合、どの成分を固定するかによって正則化項の値が変わり、最適化の経路がゲージ選択に依存し得る点には注意が必要だ。
+
+> [!NOTE]
+> **写像の像と境界：**
+> Softmaxの像は確率単体の内部（全成分が正）に限定される。有限のロジット値では単体の境界（確率0）には到達せず、境界はロジットの成分差が無限大に向かう際の極限としてのみ現れる。
 
 > [!NOTE]
 > **情報幾何学的な視点：**
-> カテゴリカル分布のパラメータ空間が $(K-1)$ 次元であることは、Softmaxが $\mathbb{R}^K$ から確率単体への**商写像**（quotient map）であることと直結している。Fisher情報行列が $K$ 次元のままだと特異（逆行列を持たない）になるのは、この商空間構造によって1次元分の情報が「潰れている」ことの反映である。
+> カテゴリカル分布のパラメータ空間が $(K-1)$ 次元であることは、Softmaxが $\mathbb{R}^K$ から確率単体への**商写像**（quotient map）として機能していることと直結している。Fisher情報行列が $K$ 次元のままだと特異（逆行列を持たない）になるのは、この商空間構造によって1次元分の情報が「潰れている」ことの反映である。
 
 ## なぜ指数形なのか：最大エントロピー原理
 
