--- a/series/04.md
+++ b/series/04.md
@@ -296,6 +296,7 @@ $$F_{ij} = \mathbb{E}_{p(x;\boldsymbol{\theta})}\left[\frac{\partial \log p}{\pa
 
 > [!NOTE]
 > **リーマン計量としてのフィッシャー情報：** 第0回で導入したリーマン計量の概念が、ここで確率分布空間に適用される。フィッシャー情報行列は、統計的な意味で「自然な」距離を定義する。この距離は、パラメータ空間での見かけの距離ではなく、分布間の「区別のしやすさ」を反映している。
+> 空間の「物差し」については、[Appendix 4 （空間の「物差し」再考: 2点間から情報の密度まで）](appendix.4.md)でも述べる。
 
 ### 自然勾配：幾何学に従った降下
 
