--- a/series/07.md
+++ b/series/07.md
@@ -137,7 +137,7 @@ $\kappa$ は、分布がどれだけ平均方向 $\boldsymbol{\mu}$ の周りに
 
 vMF分布の正規化定数 $C_d(\kappa)$ は、修正Bessel関数を含む複雑な形をしている：
 
-$$C_d(\kappa) = \frac{\kappa^{d/2 - 1}}{(2\pi)^{d/2} I_{d/2 - 1}(\kappa)}$$
+$$C_d(\kappa) = \frac{\kappa^{\frac{d}{2} - 1}}{(2\pi)^{\frac{d}{2}} I_{\frac{d}{2} - 1}(\kappa)}$$
 
 ここで $I_{\nu}(\kappa)$ は第一種修正Bessel関数である。
 
