[skip ci] updated

--- a/series/04.md
+++ b/series/04.md
@@ -318,16 +318,16 @@ $$F_{ij} = \mathbb{E}_{p(x;\boldsymbol{\theta})}\left[\frac{\partial \log p}{\pa
 **e-接続における測地線**：
 指数型分布族 $p(x; \boldsymbol{\theta}) = \exp(\boldsymbol{\theta}^\top \mathbf{t}(x) - \psi(\boldsymbol{\theta}))$ において、自然パラメータ $\boldsymbol{\theta}$ を線形補間すると、それは e-接続の測地線となる：
 
-$$p_t(x) = \exp((1-t)\boldsymbol{\theta}_0 + t\boldsymbol{\theta}_1)^\top \mathbf{t}(x) - \psi((1-t)\boldsymbol{\theta}_0 + t\boldsymbol{\theta}_1))$$
+$$p_t(x) = \exp\Big(\boldsymbol{\theta}(t)^\top \mathbf{t}(x) - \psi(\boldsymbol{\theta}(t))\Big), \quad \boldsymbol{\theta}(t) = (1-t)\boldsymbol{\theta}_0 + t\boldsymbol{\theta}_1$$
 
-Softmaxで言えば、**ロジット空間 $\mathbb{R}^K$ での直線が、そのまま e-接続の測地線に対応する**。
+Softmaxで言えば、**商空間 $\mathbb{R}^K / \mathbb{R}\mathbf{1}$ 上での直線（あるいはゲージ固定したロジット座標での直線）が、e-接続の測地線に対応する**。前述の通り、Softmaxは $\mathbf{1}$ 方向の平行移動に不変であるため、e-測地線も実質的にこの商空間上で定義される。
 
 **m-接続における測地線**：
 一方、確率分布の凸結合（混合分布）：
 
 $$p_t(x) = (1-t)p_0(x) + t p_1(x)$$
 
-これは m-接続の測地線となる。確率単体 $\Delta^{K-1}$ をユークリッド空間の部分集合と見たときの通常の直線が、この測地線に対応する。
+これは m-接続の測地線となる。**カテゴリカル分布の場合**、期待値パラメータ $\boldsymbol{\eta}$ は確率 $\mathbf{p}$ そのものに対応するため、確率単体 $\Delta^{K-1}$ をユークリッド空間の部分集合と見たときの通常の直線が、この測地線に対応する。
 
 > [!NOTE]
 > **「2種類のまっすぐ」の直感：** 
@@ -348,8 +348,8 @@ $$p_t(x) = (1-t)p_0(x) + t p_1(x)$$
 
 | 座標系 | 接続 | 測地線の表現 | Softmaxでの対応 |
 | --- | --- | --- | --- |
-| 自然パラメータ $\boldsymbol{\theta}$ | e-平坦 | $\boldsymbol{\theta}(t) = (1-t)\boldsymbol{\theta}_0 + t\boldsymbol{\theta}_1$ | ロジット空間での直線 |
-| 期待値パラメータ $\boldsymbol{\eta}$ | m-平坦 | $\boldsymbol{\eta}(t) = (1-t)\boldsymbol{\eta}_0 + t\boldsymbol{\eta}_1$ | 確率単体での直線 |
+| 自然パラメータ $\boldsymbol{\theta}$ | e-平坦 | $\boldsymbol{\theta}(t) = (1-t)\boldsymbol{\theta}_0 + t\boldsymbol{\theta}_1$ | 商空間 $\mathbb{R}^K / \mathbb{R}\mathbf{1}$ 上の直線 |
+| 期待値パラメータ $\boldsymbol{\eta}$ | m-平坦 | $\boldsymbol{\eta}(t) = (1-t)\boldsymbol{\eta}_0 + t\boldsymbol{\eta}_1$ | 確率単体 $\Delta^{K-1}$ 上の直線 |
 
 これら2つのパラメータは、ルジャンドル変換で結ばれている：
 
@@ -359,20 +359,24 @@ $$\psi(\boldsymbol{\theta}) + \phi(\boldsymbol{\eta}) = \boldsymbol{\theta}^\top
 
 **Softmaxとの関係**：
 カテゴリカル分布において：
-- 自然パラメータ = ロジット $\mathbf{z}$ 
+- 自然パラメータ = ロジット $\mathbf{z}$ （商空間 $\mathbb{R}^K / \mathbb{R}\mathbf{1}$ として）
 - 期待値パラメータ = 確率 $\mathbf{p}$ （より正確には、指示関数の期待値）
-- ルジャンドル変換 = Softmax変換とその逆のlog変換
+- Softmax = **ルジャンドル変換の勾配写像** $\mathbf{p} = \nabla_{\mathbf{z}} \psi(\mathbf{z})$ 
 
-Softmaxの背後には、この双対平坦構造が隠れている。Softmaxが「自然な」変換であるのは、指数型分布族の双対構造が要請する写像だからである。
+ここで $\psi(\mathbf{z}) = \log \sum_j \exp(z_j)$ は対数分配関数（log-partition function）である。Softmaxは、この $\psi$ の勾配として、自然パラメータから期待値パラメータへの変換を与える。
+
+逆向きは $z_i = \log p_i + C$ （ $C$ は任意定数）となり、前述の通り $\mathbf{1}$ 方向の不定性が残る。この不定性こそが、Softmaxが商空間を経由する構造の現れである。
+
+Softmaxの背後には、この双対平坦構造が隠れている。Softmaxが「自然な」変換であるのは、指数型分布族の双対構造が要請する勾配写像だからである。
 
 > [!NOTE]
 > **物理学との類似**：双対平坦構造とルジャンドル変換は、統計力学や熱力学にも現れる。自然パラメータは「強度量」（温度、化学ポテンシャル）に、期待値パラメータは「示量量」（エントロピー、粒子数）に対応し、エネルギーと自由エネルギーの関係もルジャンドル変換で記述される。
 
 > [!IMPORTANT]
 > **なぜ双対平坦性が重要か**：
-> 1. **KLダイバージェンスの分解**：双対平坦空間では、KLダイバージェンスが「ピタゴラスの定理」のような美しい分解公式（三平方の定理の一般化）を持つ。これが情報射影や変分推論の幾何学的理解につながる。
-> 2. **自然勾配の計算効率**：指数型分布族では、自然パラメータと期待値パラメータの間の変換が簡潔であり、Fisher情報行列の逆行列が解析的に扱いやすい。
-> 3. **座標の選択の指針**：機械学習において「どのパラメータ表現を使うか」は性能に影響する。双対平坦構造は、この選択に対する理論的な指針を与える。
+> 1. **KLダイバージェンスの構造**：双対平坦空間では、KLダイバージェンスが **Bregmanダイバージェンス** として表現され、**ピタゴラスの定理** の一般化（三平方分解）が成り立つ。これにより、e-射影（最尤推定）やm-射影（モーメント法）といった **情報射影（information projection）** が幾何学的に理解できる。
+> 2. **自然勾配の座標不変性**：自然勾配は、Fisher計量に関して **座標系によらず最急降下** を実現する。指数型分布族では自然パラメータと期待値パラメータの間の変換が簡潔であり、Fisher情報行列の逆行列が解析的に扱いやすい（例：カテゴリカル分布では対角化される）。
+> 3. **パラメータ表現の指針**：機械学習において「どのパラメータ表現を使うか」は性能に影響する。双対平坦構造は、この選択に対する理論的な指針を与える。特に、損失関数と整合する座標系（自然パラメータか期待値パラメータか）を選ぶことで、最適化が効率化される。
 
 ### 自然勾配：幾何学に従った降下
 
