--- a/series/04.md
+++ b/series/04.md
@@ -365,7 +365,7 @@ $$\psi(\boldsymbol{\theta}) + \phi(\boldsymbol{\eta}) = \boldsymbol{\theta}^\top
 
 ここで $\psi(\mathbf{z}) = \log \sum_j \exp(z_j)$ は対数分配関数（log-partition function）である。Softmaxは、この $\psi$ の勾配として、自然パラメータから期待値パラメータへの変換を与える。
 
-逆向きは $z_i = \log p_i + C$ （ $C$ は任意定数）となるが、これは $p_i > 0$ の範囲（単体の内部）でのみ定義される。境界 $p_i = 0$ では $\log p_i$ が発散するため、逆写像は定義されない。また、定数 $C$ はゲージ固定（例： $\sum_i z_i = 0$ を課す）によって一意に決まる。この不定性こそが、Softmaxが商空間を経由する構造の現れである。
+逆向き（**ロジットの代表元の復元**）は $z_i = \log p_i + C$ （ $C$ は任意定数）となるが、これは $p_i > 0$ の範囲（単体の内部）でのみ定義される。境界 $p_i = 0$ では $\log p_i$ が発散するため、代表元の復元は定義されない。また、商空間のもとでは定数 $C$ はゲージ固定によって一意に決まる。例えば $\sum_i z_i = 0$ を課すと、$C = -\frac{1}{K}\sum_i \log p_i$ となる。この構造こそが、Softmaxが商空間を経由する写像であることの現れである。
 
 Softmaxの背後には、この双対平坦構造が隠れている。Softmaxが「自然な」変換であるのは、指数型分布族の双対構造が要請する勾配写像だからである。
 
@@ -375,7 +375,7 @@ Softmaxの背後には、この双対平坦構造が隠れている。Softmaxが
 > [!IMPORTANT]
 > **なぜ双対平坦性が重要か**：
 > 1. **KLダイバージェンスの構造**：双対平坦空間では、KLダイバージェンスが **Bregmanダイバージェンス** として表現され、**ピタゴラスの定理** の一般化（三平方分解）が成り立つ。これにより、e-射影（最尤推定）やm-射影（モーメント法）といった **情報射影（information projection）** が幾何学的に理解できる。
-> 2. **自然勾配の座標不変性**：自然勾配は、Fisher計量に関して **座標系によらず最急降下** を実現する。指数型分布族では自然パラメータと期待値パラメータの間の変換が簡潔であり、Fisher情報行列が比較的扱いやすい構造を持つ（例：カテゴリカル分布では **適切なパラメータ化により計算が効率化される**）。
+> 2. **自然勾配の座標不変性**：自然勾配は、Fisher計量に関して **座標系によらず最急降下** を実現する。指数型分布族では自然パラメータと期待値パラメータの間の変換が簡潔であり、Fisher情報行列が扱いやすい構造を持つ（例：カテゴリカル分布では $\text{diag}(\mathbf{p}) - \mathbf{p}\mathbf{p}^T$ のような構造を持ち、単体制約のもとで低次元化や擬似逆を使って効率的に計算できる）。
 > 3. **パラメータ表現の指針**：機械学習において「どのパラメータ表現を使うか」は性能に影響する。双対平坦構造は、この選択に対する理論的な指針を与える。特に、損失関数と整合する座標系（自然パラメータか期待値パラメータか）を選ぶことで、最適化が効率化される。
 
 ### 自然勾配：幾何学に従った降下
