[skip ci] updated

--- a/series/04.md
+++ b/series/04.md
@@ -375,7 +375,7 @@ Softmaxの背後には、この双対平坦構造が隠れている。Softmaxが
 > [!IMPORTANT]
 > **なぜ双対平坦性が重要か**：
 > 1. **KLダイバージェンスの構造**：双対平坦空間では、KLダイバージェンスが **Bregmanダイバージェンス** として表現され、**ピタゴラスの定理** の一般化（三平方分解）が成り立つ。これにより、e-射影（最尤推定）やm-射影（モーメント法）といった **情報射影（information projection）** が幾何学的に理解できる。
-> 2. **自然勾配の座標不変性**：自然勾配は、Fisher計量に関して **座標系によらず最急降下** を実現する。指数型分布族では自然パラメータと期待値パラメータの間の変換が簡潔であり、Fisher情報行列が扱いやすい構造を持つ（例：カテゴリカル分布では $\text{diag}(\mathbf{p}) - \mathbf{p}\mathbf{p}^T$ のような構造を持ち、単体制約のもとで低次元化や擬似逆を使って効率的に計算できる）。
+> 2. **自然勾配の座標不変性**：自然勾配は、Fisher計量に関して **座標系によらず最急降下** を実現する。指数型分布族では自然パラメータと期待値パラメータの間の変換が簡潔であり、Fisher情報行列が扱いやすい構造を持つ（**ただし制約により特異になることもあり**、例えば、カテゴリカル分布で確率 $\mathbf{p}$ を座標に取ると Fisher は $\text{diag}(\mathbf{p}) - \mathbf{p}\mathbf{p}^T$ の形を持ち、単体制約のもとで低次元化や擬似逆を使って効率的に計算できる）。
 > 3. **パラメータ表現の指針**：機械学習において「どのパラメータ表現を使うか」は性能に影響する。双対平坦構造は、この選択に対する理論的な指針を与える。特に、損失関数と整合する座標系（自然パラメータか期待値パラメータか）を選ぶことで、最適化が効率化される。
 
 ### 自然勾配：幾何学に従った降下
