--- a/series/04.md
+++ b/series/04.md
@@ -300,6 +300,14 @@ $$F_{ij} = \mathbb{E}_{p(x;\boldsymbol{\theta})}\left[\frac{\partial \log p}{\pa
 
 ### 情報幾何学における双対構造：2種類のまっすぐ
 
+> [!TIP]
+> **ここは読み飛ばしてもよい。**
+>
+> この「双対構造」や「接続」は、情報幾何学で非常に重要な項目であるが、もし今の時点で「難しすぎる」と感じたら、以下の結論だけ覚えて先に進んでよい。
+>
+> - 結論： **確率の世界は平らではなく「歪んでいる」ため、普通の定規では測れない。**
+> - 直感： 0%や100%に近い場所（単体の端）では、少しのロジットの変化が大きな意味を持つため、学習の歩幅を賢く調整する必要がある。
+
 情報幾何学の最も深い洞察の一つは、確率分布の空間には **2種類の「まっすぐ」** が存在するということである。これは通常のユークリッド空間では区別されないが、確率空間の本質的な非対称性を反映している。
 
 #### e-接続とm-接続
@@ -407,6 +415,12 @@ $$\tilde{\nabla} _{\boldsymbol{\theta}} \mathcal{L} = \mathbf{F}^{-1} \nabla _{\
 > **曲率情報を用いた最適化の実用化：** 自然勾配の計算はフィッシャー情報行列の逆行列を必要とし、大規模モデルでは直接計算が困難である。実用的なアプローチとして、(1) **Fisher近似系**：K-FAC（Martens & Grosse, 2015）はクロネッカー積によるブロック対角近似を用いて自然勾配を近似する、(2) **ヘシアン系**：Sophia（Liu et al., 2023）は対角ヘシアン推定を前条件として用いる二次最適化手法である。SophiaはFisher情報（情報幾何の計量）を直接近似しているわけではなく、損失関数のヘシアンを用いる点で自然勾配とは異なるアプローチだが、曲率情報を活用する点で広義の二次最適化として関連がある。
 
 ## 発展トピック：構造化と離散化
+
+> [!TIP]
+> **ここは読み飛ばしてもよい。**
+>
+> もし固有表現抽出などの「系列データの整合性」が重要なタスク（CRF）や、
+> 強化学習のように「離散的な選択」を微分可能に扱いたい場合（Gumbel-Softmax）は、必要な時に立ち戻って参照すればよい。
 
 ### 構造化予測：点から線へ
 
