--- a/series/06.md
+++ b/series/06.md
@@ -125,7 +125,7 @@ QueryとKeyの内積を計算し、スケーリングする：
 
 $$\text{Attention}(\mathbf{Q}, \mathbf{K}, \mathbf{V}) = \text{softmax}\left(\frac{\mathbf{Q} \mathbf{K}^\top}{\sqrt{d_k}}\right) \mathbf{V}$$
 
-ここで $\sqrt{d_k}$ によるスケーリングは、内積の分散を安定させるためのものである。
+$\sqrt{d_k}$ はKey・Queryの次元数の二乗根で、これによるスケーリングは、内積の分散を安定させるためのものである。
 
 > [!IMPORTANT]
 > **標準TransformerとL2正規化の違い：** 標準Transformerでは、LayerNormやRMSNormが使われるが、これらは **平均・分散の正規化** であり、ベクトルを単位ノルムにする **L2正規化とは異なる**。したがって、 $\mathbf{Q}^\top \mathbf{K}$ は純粋な角度情報（ $\cos\theta$ ）ではなく、**方向と大きさの両方の影響を受ける**。
@@ -220,6 +220,9 @@ $$\text{head}_i = \text{Attention}(\mathbf{Q} W_Q^i, \mathbf{K} W_K^i, \mathbf{V
 
 > [!NOTE]
 > **LDAとの比較（比喩として）：** 第1回で触れたLDA（Linear Discriminant Analysis）は、固定されたトピック空間への射影を行う。Multi-head Attentionは、入力ごとに変化する「見方」の集合を学習するという意味で、LDAの動的・連続版と見なせる。ただし、これは直感的な比喩であり、最適化問題として同一ではない。
+
+> [!NOTE]
+> Mixture of Experts (MoE) との比較は[第13回](13.md)で行う。
 
 ## RoPE：回転による相対位置の表現
 
