--- a/series/06.md
+++ b/series/06.md
@@ -246,21 +246,25 @@ $$
 $$
 ここで $R_m$ は位置 $m$ に対応する回転行列である。
 
-この設計の妙は、内積を計算したとき：
+この設計の妙は、回転適用後の内積を計算したとき：
 
 $$
 \mathbf{q}'^{\top}_m \mathbf{k}'_n = \mathbf{q}^\top R _m ^\top R _n \mathbf{k} = \mathbf{q}^\top R _{n-m} \mathbf{k}
 $$
-となり、結果が**相対位置 $(n - m)$ のみに依存する**ことである。これは、ベクトルの「絶対的な位置」ではなく「ペア間の距離（オフセット）」をモデルが直接扱えることを意味する。
+となり、結果が**符号付き相対オフセット $(n - m)$ のみに依存する**ことである。絶対座標は消え、向きを含む「位置の差」だけが残る。
+
+> [!NOTE] **実装上の注意：** 数式上は行列 $R$ を書くが、実装では巨大な回転行列を明示的に作ることはしない。計算効率のため、ベクトルをペアごとに $(x_1, x_2)$ とし、$\sin, \cos$ を直接掛けて回転後の座標を求める（複素数の掛け算と同様の処理を行う）。
 
 ### 2次元での具体例
 
-RoPEの仕組みを、まずは**単一の周波数を持つ2次元部分空間**の場合で具体的に見てみよう。 位置 $m$ での回転行列は以下のように定義される：
+RoPEの仕組みを、まずは**単一の周波数を持つ2次元部分空間**の場合で具体的に見てみよう（※実際には次元ペアごとに周波数は異なるが、ここでは直観のために固定する）。
+
+位置 $m$ での回転行列は以下のように定義される：
 
 $$
 R_m = \begin{pmatrix} \cos(m\theta) & -\sin(m\theta) \\ \sin(m\theta) & \cos(m\theta) \end{pmatrix}
 $$
-ここで、基本回転角 $\theta = 0.5$（約28度）と仮定し、Queryベクトル $\mathbf{q} = (1, 0)$ の変化を追ってみる。（※実際には次元ごとに異なる $\theta$ を使うが、ここでは直観のために固定する）。
+ここで、基本回転角 $\theta = 0.5$（約28度）と仮定し、Queryベクトル $\mathbf{q} = (1, 0)$ の変化を追ってみる。
 
 - **位置 $m=0$（1番目の単語）**: 回転角 $0$。 $\mathbf{q}'_0 = (1, 0)$ のまま。
 - **位置 $m=1$（2番目の単語）**: 回転角 $0.5$。 $\mathbf{q}'_1 = (\cos 0.5, \sin 0.5) \approx (0.88, 0.48)$。
@@ -280,8 +284,8 @@ $$
 ### 幾何学的メリット：情報の保存と長距離への対応
 
 1. **ノルムの不変性**: 回転操作はベクトルの長さ（ノルム）を変えない。これにより、位置情報を追加しても「単語自体の意味の強さ」が保存される。
-2. **相対的な距離の抽出**: 内積をとると絶対位置 $m, n$ は消え、差分 $n-m$ だけが残る。これにより、文章中のどこに現れても、同じ距離関係にある単語ペアは同じように処理できる。
-3. **長距離減衰の傾向**: 複数の周波数が組み合わさることで、距離が離れると位相がズレて内積が打ち消し合いやすくなる（ランダムウォークに近い振る舞いをする）。これにより、**結果として**遠くの単語への注目が平均的に弱まる傾向（Long-term decay）が生まれることがある。*補足*: これは強制的な減衰（ALiBi等）とは異なり、モデルが学習次第で遠くの情報を維持することも可能な、柔軟な特性である。
+2. **相対的な距離の抽出**: 回転後の内積をとると絶対位置 $m, n$ は消え、差分 $n-m$ だけが残る。これにより、文章中のどこに現れても、同じ相対関係にある単語ペアは同じように処理できる。
+3. **長距離減衰の傾向**: 複数の周波数が組み合わさることで、距離が離れると位相がズレて内積の成分が互いに相殺し合いやすくなる。これにより、**結果として**遠くの単語への注目が平均的に弱まる傾向（Long-term decay）が生まれることがある。*補足*: これは強制的な減衰（ALiBi等）とは異なり、モデルが学習次第で遠くの情報を維持することも可能な、柔軟な特性である。
 
 ### 幾何学的解釈：天球の回転
 
