--- a/series/06.md
+++ b/series/06.md
@@ -244,7 +244,7 @@ Query と Key のベクトルに、位置依存の回転行列を適用する：
 $$
 \mathbf{q}'_m = R_m \mathbf{q}, \quad \mathbf{k}'_n = R_n \mathbf{k}
 $$
-ここで $R_m$ は位置 $m$ に対応する回転行列である。
+ここで $R_m$ は位置 $m$ に対応する回転行列である（厳密には、2次元の回転行列を対角線上に並べた**ブロック対角行列**の形をとる）。
 
 この設計の妙は、回転適用後の内積を計算したとき：
 
@@ -253,7 +253,8 @@ $$
 $$
 となり、結果が**符号付き相対オフセット $(n - m)$ のみに依存する**ことである。絶対座標は消え、向きを含む「位置の差」だけが残る。
 
-> [!NOTE] **実装上の注意：** 数式上は行列 $R$ を書くが、実装では巨大な回転行列を明示的に作ることはしない。計算効率のため、ベクトルをペアごとに $(x_1, x_2)$ とし、$\sin, \cos$ を直接掛けて回転後の座標を求める（複素数の掛け算と同様の処理を行う）。
+> [!NOTE]
+> **実装上の注意：** 数式上は巨大な行列 $R$ を書くが、実装ではこれを明示的に作ることはしない。計算効率のため、ベクトルをペアごとに $(x_1, x_2)$ とし、$\sin, \cos$ を直接掛けて回転後の座標を求める（複素数の掛け算と同様の処理を行う）。
 
 ### 2次元での具体例
 
@@ -284,8 +285,8 @@ $$
 ### 幾何学的メリット：情報の保存と長距離への対応
 
 1. **ノルムの不変性**: 回転操作はベクトルの長さ（ノルム）を変えない。これにより、位置情報を追加しても「単語自体の意味の強さ」が保存される。
-2. **相対的な距離の抽出**: 回転後の内積をとると絶対位置 $m, n$ は消え、差分 $n-m$ だけが残る。これにより、文章中のどこに現れても、同じ相対関係にある単語ペアは同じように処理できる。
-3. **長距離減衰の傾向**: 複数の周波数が組み合わさることで、距離が離れると位相がズレて内積の成分が互いに相殺し合いやすくなる。これにより、**結果として**遠くの単語への注目が平均的に弱まる傾向（Long-term decay）が生まれることがある。*補足*: これは強制的な減衰（ALiBi等）とは異なり、モデルが学習次第で遠くの情報を維持することも可能な、柔軟な特性である。
+2. **相対的な距離の抽出**: 回転後の内積をとると絶対位置 $m, n$ は消え、差分 $n-m$ だけが残る。これにより、**相対オフセットに依存する形で注意スコアを構成**でき、文章中のどこに現れても位置関係を一貫して扱える。
+3. **長距離減衰の傾向**: 複数の周波数が組み合わさることで、距離が離れると位相がズレて内積の成分が互いに相殺し合いやすくなる。これにより、**結果として**遠くの単語への注目が平均的に弱まる傾向（距離による相殺効果）が生まれることがある。*補足*: これは強制的な減衰（ALiBi等）とは異なり、モデルが学習次第で遠くの情報を維持することも可能な、柔軟な特性である。
 
 ### 幾何学的解釈：天球の回転
 
