--- a/series/06.md
+++ b/series/06.md
@@ -241,16 +241,13 @@ RoPE（Su et al., 2021）の核心的アイデアは、位置を**回転**とし
 
 Query と Key のベクトルに、位置依存の回転行列を適用する：
 
-$$
-\mathbf{q}'_m = R_m \mathbf{q}, \quad \mathbf{k}'_n = R_n \mathbf{k}
-$$
+$$ \mathbf{q}'_m = R_m \mathbf{q}, \quad \mathbf{k}'_n = R_n \mathbf{k} $$
+
 ここで $R_m$ は位置 $m$ に対応する回転行列である（厳密には、2次元の回転行列を対角線上に並べた**ブロック対角行列**の形をとる）。
 
 この設計の妙は、回転適用後の内積を計算したとき：
 
-$$
-\mathbf{q}'^{\top}_m \mathbf{k}'_n = \mathbf{q}^\top R _m ^\top R _n \mathbf{k} = \mathbf{q}^\top R _{n-m} \mathbf{k}
-$$
+$$ \mathbf{q}'^{\top}_m \mathbf{k}'_n = \mathbf{q}^\top R _m ^\top R _n \mathbf{k} = \mathbf{q}^\top R _{n-m} \mathbf{k} $$
 となり、結果が**符号付き相対オフセット $(n - m)$ のみに依存する**ことである。絶対座標は消え、向きを含む「位置の差」だけが残る。
 
 > [!WARNING]
@@ -262,9 +259,8 @@ RoPEの仕組みを、まずは**単一の周波数を持つ2次元部分空間*
 
 位置 $m$ での回転行列は以下のように定義される：
 
-$$
-R_m = \begin{pmatrix} \cos(m\theta) & -\sin(m\theta) \\\\ \sin(m\theta) & \cos(m\theta) \end{pmatrix}
-$$
+$$ R_m = \begin{pmatrix} \cos(m\theta) & -\sin(m\theta) \\\\ \sin(m\theta) & \cos(m\theta) \end{pmatrix} $$
+
 ここで、基本回転角 $\theta = 0.5$ （約28度）と仮定し、Queryベクトル $\mathbf{q} = (1, 0)$ の変化を追ってみる。
 
 - **位置 $m=0$ （1番目の単語）**: 回転角 $0$ 。 $\mathbf{q}'_0 = (1, 0)$ のまま。
