--- a/series/01.md
+++ b/series/01.md
@@ -328,7 +328,7 @@ $$\text{TF-IDF}(t, d) = \text{TF}(t, d) \times \log \frac{N}{\text{DF}(t)}$$
 **しかし限界も明確だった：** TF-IDFで重み付けしても、結局は高次元の疎（スパース）なベクトルのままである。また、「王」と「女王」の意味的な近さといった関係性は、依然として捉えられない。
 
 > [!NOTE]
-> **次回への伏線：** コサイン類似度はベクトルのノルム（長さ）を無視して方向だけを見る。TF-IDFは各次元の重み付けで方向を変えるため、コサインと組み合わせても有効ではある。しかし、文書長・語彙量・強い特徴語の多さのような「量的情報」をノルムに載せる設計とは相性が悪い。ノルムと方向、どちらに何の情報を載せるべきか——この混線が、第2回「ノルムの呪い」のテーマである。
+> **次回への伏線：** コサイン類似度はベクトルのノルム（長さ）を無視して方向だけを見る。TF-IDFは各次元の重み付けで方向を変えるため、コサインと組み合わせても有効なことが多い。しかし、文書長・語彙量・強い特徴語の多さのような「量的情報」をノルムに載せる設計とは相性が悪い。ノルムと方向、どちらに何の情報を載せるべきか——この混線が、第2回「ノルムの呪い」のテーマである。
 
 この「頻度ベースの疎な空間」という限界を打破するため、次の世代の手法——トピックモデル（次元圧縮）や単語埋め込み（連続空間）——が登場することになる。
 
@@ -666,4 +666,4 @@ print(f"BoWは同一か: {bow1 == bow2}")  # True
 - Pennington, J., Socher, R., & Manning, C. D. (2014). GloVe: Global Vectors for Word Representation. *EMNLP 2014*.
     - GloVe。共起統計に基づく単語埋め込み。
 - Levy, O., & Goldberg, Y. (2014). Neural Word Embedding as Implicit Matrix Factorization. *NeurIPS 2014*.
-    - Skip-gram Negative Sampling（SGNS）がPMI行列の因子分解として解釈できることを示した。
+    - Skip-gram Negative Sampling（SGNS）がPMI行列の因子分解として解釈できることを明らかにした。
